# crates-io-warmup

./: Cargo.toml
