[package]
name = "warmup"
version = "0.1.0"
authors = ["Yu Ding <dingelish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"juniper" = "*"
"strum" = "*"
"foreign-types" = "*"
"statrs" = "*"
"crossbeam-channel" = "*"
"string_cache" = "*"
"prettytable-rs" = "*"
"hound" = "*"
"temporary" = "*"
"paste" = "*"
"htmlescape" = "*"
"serde_json" = "*"
"bitcoin" = "*"
"bit-vec" = "*"
"mustache" = "*"
"shellexpand" = "*"
"actix-rt" = "*"
"tokio-process" = "*"
"rustls" = "*"
"seahash" = "*"
"static_assertions" = "*"
"mio-named-pipes" = "*"
"toml_edit" = "*"
"rand_os" = "*"
"yup-oauth2" = "*"
"sha-1" = "*"
"bytecount" = "*"
"iovec" = "*"
"fibers_global" = "*"
"darling" = "*"
"rusoto_credential" = "*"
"libimaginteraction" = "*"
"minifb" = "*"
"tokio-timer" = "*"
"rusqlite" = "*"
"js-sys" = "*"
"xmltree" = "*"
"rocket_codegen" = "*"
"shader_version" = "*"
"clang" = "*"
"core-foundation" = "*"
"tempdir" = "*"
"shared_library" = "*"
"mach" = "*"
"gcc" = "*"
"number_prefix" = "*"
"rodio" = "*"
"bus" = "*"
"trackable" = "*"
"version-sync" = "*"
"tempfile" = "*"
"tokio-reactor" = "*"
"hex-literal" = "*"
"error-chain" = "*"
"expectest" = "*"
"grpcio" = "*"
"num-iter" = "*"
"gfx_device_gl" = "*"
"dot" = "*"
"aes-ctr" = "*"
"typed-arena" = "*"
"semver-parser" = "*"
"matches" = "*"
"loggerv" = "*"
"winreg" = "*"
"mmap" = "*"
"chashmap" = "*"
"sys-info" = "*"
"either" = "*"
"gtk" = "*"
"iron-test" = "*"
"redox_syscall" = "*"
"rlua" = "*"
"json" = "*"
"x25519-dalek" = "*"
"ethereum-types" = "*"
"stdweb-derive" = "*"
"libimagerror" = "*"
"rand_core" = "*"
"shell-escape" = "*"
"pistoncore-window" = "*"
"urlencoded" = "*"
"data-encoding" = "*"
"jni" = "*"
"cast" = "*"
"clippy" = "*"
"sgx_types" = "*"
"object" = "*"
"take_mut" = "*"
"gleam" = "*"
"globwalk" = "*"
"multipart" = "*"
"webpki" = "*"
"timber" = "*"
"cpython" = "*"
"rotor" = "*"
"cfg-if" = "*"
"dialoguer" = "*"
"os_type" = "*"
"sputnikvm" = "*"
"libimagstore" = "*"
"etcommon-rlp" = "*"
"hostname" = "*"
"url_serde" = "*"
"syntect" = "*"
"xcb" = "*"
"gfx_window_glutin" = "*"
"vte" = "*"
"predicates" = "*"
"nix" = "*"
"tabwriter" = "*"
"piston-texture" = "*"
"actix-codec" = "*"
"fs_extra" = "*"
"piston" = "*"
"ordered-float" = "*"
"hamcrest" = "*"
"ncurses" = "*"
"generic-array" = "*"
"aes" = "*"
"cairo-sys-rs" = "*"
"derivative" = "*"
"prometheus" = "*"
"tokio" = "*"
"unsafe-any" = "*"
"ethabi" = "*"
"pyo3" = "*"
"v_htmlescape" = "*"
"lodepng" = "*"
"enum_primitive" = "*"
"scoped-tls" = "*"
"imageproc" = "*"
"lark-collections" = "*"
"cranelift-entity" = "*"
"reproto-backend" = "*"
"mockito" = "*"
"derive-new" = "*"
"solana-logger" = "*"
"crypto-mac" = "*"
"mime_guess" = "*"
"ndarray-linalg" = "*"
"dimensioned" = "*"
"target-lexicon" = "*"
"pretty-bytes" = "*"
"pistoncore-input" = "*"
"slice-deque" = "*"
"rug" = "*"
"libsecp256k1" = "*"
"procinfo" = "*"
"modifier" = "*"
"indexmap" = "*"
"cursive" = "*"
"argparse" = "*"
"strsim" = "*"
"prost" = "*"
"log4rs" = "*"
"walkdir" = "*"
"tc_core" = "*"
"router" = "*"
"base58" = "*"
"toml" = "*"
"xml-rs" = "*"
"criterion" = "*"
"maplit" = "*"
"num-integer" = "*"
"evm" = "*"
"camera_controllers" = "*"
"peg" = "*"
"glfw" = "*"
"pem" = "*"
"tui" = "*"
"cannyls" = "*"
"wavefront_obj" = "*"
"term-painter" = "*"
"void" = "*"
"protoc-rust" = "*"
"toml-query" = "*"
"lz4" = "*"
"embedded-hal" = "*"
"winit" = "*"
"rmp-serde" = "*"
"prometrics" = "*"
"indoc" = "*"
"pest_derive" = "*"
"serde-xml-rs" = "*"
"goblin" = "*"
"pathdiff" = "*"
"allegro-sys" = "*"
"reproto-naming" = "*"
"glob" = "*"
"geojson" = "*"
"pretty_assertions" = "*"
"embedded-hal-mock" = "*"
"obj" = "*"
"twoway" = "*"
"gpgme" = "*"
"cssparser" = "*"
"gobject-sys" = "*"
"human-panic" = "*"
"linux-embedded-hal" = "*"
"libimagentryedit" = "*"
"pistoncore-sdl2_window" = "*"
"globset" = "*"
"rustfmt" = "*"
"tk-http" = "*"
"serialport" = "*"
"ipnetwork" = "*"
"serde_test" = "*"
"approx" = "*"
"itertools-num" = "*"
"gluon" = "*"
"chrono" = "*"
"packed_simd" = "*"
"primal" = "*"
"orbclient" = "*"
"png" = "*"
"portaudio" = "*"
"simd" = "*"
"ieee754" = "*"
"unicode-normalization" = "*"
"unicode-segmentation" = "*"
"rpassword" = "*"
"staticfile" = "*"
"genco" = "*"
"cairo-rs" = "*"
"spidev" = "*"
"cortex-m-rtfm" = "*"
"winapi-build" = "*"
"redis" = "*"
"hidapi" = "*"
"futures-core" = "*"
"futures-cpupool" = "*"
"gdk" = "*"
"comrak" = "*"
"mktemp" = "*"
"sloggers" = "*"
"mysql" = "*"
"libusb" = "*"
"lark-parser" = "*"
"heapsize" = "*"
"rayon" = "*"
"stable_deref_trait" = "*"
"ocl" = "*"
"smallvec" = "*"
"native-tls" = "*"
"env_logger" = "*"
"assert" = "*"
"crossbeam-deque" = "*"
"allegro" = "*"
"gltf" = "*"
"termios" = "*"
"trust-dns" = "*"
"rss" = "*"
"futures" = "*"
"capnpc" = "*"
"gtk-sys" = "*"
"pretty" = "*"
"fixed-hash" = "*"
"blake2-rfc" = "*"
"gtk-rs-lgpl-docs" = "*"
"rustc-hash" = "*"
"textnonce" = "*"
"rust-lzma" = "*"
"r2d2-diesel" = "*"
"rusticata-macros" = "*"
"mdbook" = "*"
"uint" = "*"
"failure_derive" = "*"
"atomic_immut" = "*"
"escargot" = "*"
"RustyXML" = "*"
"cocoa" = "*"
"multiaddr" = "*"
"vulkano" = "*"
"structdoc" = "*"
"user32-sys" = "*"
"chan" = "*"
"dotenv" = "*"
"rustyline" = "*"
"shrev" = "*"
"percent-encoding" = "*"
"piston2d-graphics" = "*"
"rand_chacha" = "*"
"erased-serde" = "*"
"grpc" = "*"
"proc-macro2" = "*"
"git2" = "*"
"x11-dl" = "*"
"tokio-udp" = "*"
"petgraph" = "*"
"byte-tools" = "*"
"i2cdev" = "*"
"sxd-document" = "*"
"gstreamer" = "*"
"futures-await" = "*"
"diesel" = "*"
"warp" = "*"
"lock_api" = "*"
"irc" = "*"
"glib-sys" = "*"
"quicli" = "*"
"phf_codegen" = "*"
"clear_on_drop" = "*"
"rlp" = "*"
"language-tags" = "*"
"slug" = "*"
"curve25519-dalek" = "*"
"leb128" = "*"
"cpp_utils" = "*"
"rmp" = "*"
"tobj" = "*"
"xio_base_datatypes" = "*"
"conv" = "*"
"trust-dns-proto" = "*"
"kuchiki" = "*"
"mount" = "*"
"cbindgen" = "*"
"ws2_32-sys" = "*"
"spin" = "*"
"heim-common" = "*"
"ring" = "*"
"multimap" = "*"
"route-recognizer" = "*"
"sgx-isa" = "*"
"tokio-tls" = "*"
"diff" = "*"
"rustc-hex" = "*"
"utils" = "*"
"rustdoc-stripper" = "*"
"gio" = "*"
"regex_macros" = "*"
"actix-http" = "*"
"security-framework" = "*"
"rustbox" = "*"
"version_check" = "*"
"pbkdf2" = "*"
"swagger" = "*"
"flate2" = "*"
"slog-stdlog" = "*"
"syslog" = "*"
"tokio-uds" = "*"
"separator" = "*"
"im" = "*"
"ole32-sys" = "*"
"notify" = "*"
"mac" = "*"
"core_io" = "*"
"chrono-tz" = "*"
"quick-error" = "*"
"slog" = "*"
"csv" = "*"
"subprocess" = "*"
"crunchy" = "*"
"rusoto_core" = "*"
"futures-io" = "*"
"bio" = "*"
"constant_time_eq" = "*"
"ethereum-bigint" = "*"
"unic-char-property" = "*"
"rand_hc" = "*"
"quick-xml" = "*"
"kiss3d" = "*"
"xdg" = "*"
"remove_dir_all" = "*"
"config" = "*"
"glutin" = "*"
"shell-words" = "*"
"crossbeam-utils" = "*"
"atsamd-hal" = "*"
"actix" = "*"
"r2d2_redis" = "*"
"slog-term" = "*"
"pango-sys" = "*"
"fxhash" = "*"
"openssl" = "*"
"hyperx" = "*"
"abstract-ns" = "*"
"rusoto_dynamodb" = "*"
"nodrop" = "*"
"wasm-bindgen" = "*"
"gdi32-sys" = "*"
"signatory" = "*"
"isatty" = "*"
"adler32" = "*"
"treexml" = "*"
"retry" = "*"
"futures-util-preview" = "*"
"riker" = "*"
"blas-src" = "*"
"wee_alloc" = "*"
"gnuplot" = "*"
"lark-string" = "*"
"proptest" = "*"
"page_size" = "*"
"unindent" = "*"
"gstreamer-sys" = "*"
"gl" = "*"
"tk-listen" = "*"
"simplelog" = "*"
"missing_mpl" = "*"
"bson" = "*"
"fixedbitset" = "*"
"jsonrpc-http-server" = "*"
"memchr" = "*"
"vcpkg" = "*"
"users" = "*"
"unic-char-range" = "*"
"yaml-rust" = "*"
"noisy_float" = "*"
"regex-syntax" = "*"
"codespan-reporting" = "*"
"lazycell" = "*"
"serial" = "*"
"objc-foundation" = "*"
"pancurses" = "*"
"handlebars" = "*"
"pom" = "*"
"tokio-proto" = "*"
"lalrpop" = "*"
"rustc_version" = "*"
"bytes" = "*"
"arrayvec" = "*"
"ws" = "*"
"lark-ty" = "*"
"phf" = "*"
"serde-value" = "*"
"minidom" = "*"
"cli_test_dir" = "*"
"x11" = "*"
"wabt" = "*"
"pnet" = "*"
"drone-core" = "*"
"geo" = "*"
"dpdk-sys" = "*"
"xmas-elf" = "*"
"rprompt" = "*"
"synstructure" = "*"
"servo-freetype-sys" = "*"
"reproto-manifest" = "*"
"gl_generator" = "*"
"wayland-sys" = "*"
"blas" = "*"
"piston_window" = "*"
"rgb" = "*"
"range" = "*"
"chrono-humanize" = "*"
"pkg-config" = "*"
"tungstenite" = "*"
"hashbrown" = "*"
"open" = "*"
"strum_macros" = "*"
"flatbuffers" = "*"
"failure" = "*"
"scopeguard" = "*"
"imgui" = "*"
"lyon_path" = "*"
"elastic-array" = "*"
"elf" = "*"
"bytecodec" = "*"
"lark-hir" = "*"
"libz-sys" = "*"
"hyper-rustls" = "*"
"hyper-native-tls" = "*"
"web-sys" = "*"
"textwrap" = "*"
"getset" = "*"
"heck" = "*"
"jsonrpc-core" = "*"
"block-buffer" = "*"
"serde" = "*"
"uuid" = "*"
"which" = "*"
"gimli" = "*"
"sdl2-sys" = "*"
"libloading" = "*"
"params" = "*"
"nearly_eq" = "*"
"yansi" = "*"
"libm" = "*"
"structopt-derive" = "*"
"aho-corasick" = "*"
"rocket" = "*"
"pulldown-cmark" = "*"
"duct" = "*"
"glium" = "*"
"docopt" = "*"
"num_cpus" = "*"
"metadeps" = "*"
"conduit" = "*"
"mopa" = "*"
"gdk-sys" = "*"
"siphasher" = "*"
"skeptic" = "*"
"stderrlog" = "*"
"qrcode" = "*"
"md-5" = "*"
"cookie-factory" = "*"
"fibers" = "*"
"gdk-pixbuf-sys" = "*"
"bitcoin_hashes" = "*"
"mkdirp" = "*"
"tokio-io" = "*"
"dbus" = "*"
"cargo" = "*"
"miow" = "*"
"ref_slice" = "*"
"serde_derive" = "*"
"solana-sdk" = "*"
"try_from" = "*"
"filetime" = "*"
"quasi" = "*"
"ryu" = "*"
"cookie" = "*"
"wasm-bindgen-futures" = "*"
"libc" = "*"
"rust-ini" = "*"
"wayland-client" = "*"
"cranelift-codegen" = "*"
"stopwatch" = "*"
"syscall" = "*"
"time" = "*"
"gio-sys" = "*"
"indicatif" = "*"
"tokio-rustls" = "*"
"qt_build_tools" = "*"
"hash-db" = "*"
"num-derive" = "*"
"routing" = "*"
"keccak-hasher" = "*"
"aster" = "*"
"palette" = "*"
"num-complex" = "*"
"ethereum-rlp" = "*"
"prost-build" = "*"
"backtrace" = "*"
"susy-jsonrpc-core" = "*"
"openssl-probe" = "*"
"linefeed" = "*"
"amethyst_assets" = "*"
"mio-uds" = "*"
"tiny_http" = "*"
"quickcheck" = "*"
"atomic" = "*"
"grin_core" = "*"
"bcrypt" = "*"
"jemallocator" = "*"
"quote" = "*"
"cortex-m-rt" = "*"
"llvm-sys" = "*"
"svg" = "*"
"tokio-tcp" = "*"
"slog-scope" = "*"
"flame" = "*"
"syntex_syntax" = "*"
"blake2" = "*"
"slog-async" = "*"
"byteorder" = "*"
"futures-channel-preview" = "*"
"assert_matches" = "*"
"clock_ticks" = "*"
"idna" = "*"
"zstd" = "*"
"interledger-packet" = "*"
"crypto-hash" = "*"
"qt_core" = "*"
"codespan" = "*"
"bit-set" = "*"
"tokio-fs" = "*"
"signal-hook" = "*"
"liquid" = "*"
"hkdf" = "*"
"prost-derive" = "*"
"proc-macro-hack" = "*"
"threadpool" = "*"
"shred" = "*"
"wasm-bindgen-test" = "*"
"owning_ref" = "*"
"webpki-roots" = "*"
"serde_yaml" = "*"
"lark-intern" = "*"
"rustc-test" = "*"
"rental" = "*"
"tiny-keccak" = "*"
"rouille" = "*"
"parking_lot" = "*"
"structopt" = "*"
"serde_codegen" = "*"
"unicase" = "*"
"tokio-executor" = "*"
"coord_2d" = "*"
"euclid" = "*"
"embedded-graphics" = "*"
"gstreamer-base-sys" = "*"
"make-cmd" = "*"
"encoding_rs" = "*"
"tokio-current-thread" = "*"
"nickel" = "*"
"reproto-trans" = "*"
"hmac" = "*"
"inotify" = "*"
"libimagutil" = "*"
"filters" = "*"
"thread_profiler" = "*"
"enum-primitive-derive" = "*"
"block-cipher-trait" = "*"
"mio" = "*"
"hyper-tls" = "*"
"curl" = "*"
"bitflags" = "*"
"libflate" = "*"
"cargo_metadata" = "*"
"cpal" = "*"
"fps_counter" = "*"
"pcap" = "*"
"custom_derive" = "*"
"rusoto_mock" = "*"
"digest" = "*"
"once_cell" = "*"
"ripemd160" = "*"
"termcolor" = "*"
"jsonwebtoken" = "*"
"tokio-sync" = "*"
"num-rational" = "*"
"lazy_static" = "*"
"block" = "*"
"arrayref" = "*"
"vergen" = "*"
"bigdecimal" = "*"
"thread_local" = "*"
"commandext" = "*"
"rusoto_s3" = "*"
"arc-swap" = "*"
"ethereum-hexutil" = "*"
"err-derive" = "*"
"rustc-demangle" = "*"
"combine" = "*"
"brotli" = "*"
"panic-abort" = "*"
"tokio-core" = "*"
"cgmath" = "*"
"typemap" = "*"
"gir-format-check" = "*"
"serde_cbor" = "*"
"rust-extra" = "*"
"crc32fast" = "*"
"unic-ucd-version" = "*"
"html5ever" = "*"
"qt_gui" = "*"
"secp256k1" = "*"
"thread-id" = "*"
"integer-encoding" = "*"
"self_update" = "*"
"unsigned-varint" = "*"
"scoped-pool" = "*"
"errno" = "*"
"tar" = "*"
"libimagrt" = "*"
"uname" = "*"
"fs2" = "*"
"libp2p-tcp" = "*"
"ndarray" = "*"
"panic-semihosting" = "*"
"amethyst_core" = "*"
"horrorshow" = "*"
"gdk-pixbuf" = "*"
"insta" = "*"
"diesel_migrations" = "*"
"amethyst_renderer" = "*"
"dtoa" = "*"
"http" = "*"
"futures-timer" = "*"
"rand" = "*"
"rppal" = "*"
"fuse" = "*"
"shaderc" = "*"
"cty" = "*"
"itoa" = "*"
"ctrlc" = "*"
"console" = "*"
"fallible-iterator" = "*"
"relative-path" = "*"
"actix-web" = "*"
"macro-attr" = "*"
"futures-preview" = "*"
"httpcodec" = "*"
"directories" = "*"
"clap" = "*"
"slog-json" = "*"
"bare-metal" = "*"
"assert_cmd" = "*"
"gdnative-common" = "*"
"raw-cpuid" = "*"
"secstr" = "*"
"panic-halt" = "*"
"ascii" = "*"
"lark-entity" = "*"
"pad" = "*"
"shlex" = "*"
"tera" = "*"
"tokio-openssl" = "*"
"ron" = "*"
"image" = "*"
"syntex_errors" = "*"
"timebomb" = "*"
"kailua_env" = "*"
"susydev-jsonrpc-core" = "*"
"derive_builder" = "*"
"lru_time_cache" = "*"
"reproto-core" = "*"
"syn" = "*"
"xkbcommon" = "*"
"eui48" = "*"
"pest" = "*"
"difference" = "*"
"likely" = "*"
"humansize" = "*"
"os_pipe" = "*"
"unicode-xid" = "*"
"random" = "*"
"crc16" = "*"
"rocket_contrib" = "*"
"core-graphics" = "*"
"cortex-m" = "*"
"webbrowser" = "*"
"untrusted" = "*"
"quasi_macros" = "*"
"app_dirs" = "*"
"unicode-width" = "*"
"strfmt" = "*"
"context" = "*"
"objc_id" = "*"
"crossterm" = "*"
"tokio-signal" = "*"
"sdl2" = "*"
"zeroize" = "*"
"cortex-m-semihosting" = "*"
"bindgen" = "*"
"pretty_env_logger" = "*"
"etcommon-bigint" = "*"
"fst" = "*"
"derive_more" = "*"
"tendril" = "*"
"gfx_core" = "*"
"ed25519-dalek" = "*"
"serde_ignored" = "*"
"cpp_build" = "*"
"persistent" = "*"
"local-encoding" = "*"
"iron" = "*"
"bit_field" = "*"
"protoc" = "*"
"sha3" = "*"
"Inflector" = "*"
"clang-sys" = "*"
"crossbeam" = "*"
"winapi" = "*"
"gfx-hal" = "*"
"languageserver-types" = "*"
"cpp" = "*"
"deflate" = "*"
"glib" = "*"
"unix_socket" = "*"
"const-cstr" = "*"
"tokio-codec" = "*"
"find_folder" = "*"
"trust-dns-resolver" = "*"
"stream-cipher" = "*"
"get_if_addrs" = "*"
"tokio-service" = "*"
"lark-span" = "*"
"nb" = "*"
"vulkano-win" = "*"
"inflate" = "*"
"encoding" = "*"
"log" = "*"
"bzip2" = "*"
"sgxs" = "*"
"allegro_util" = "*"
"serde_macros" = "*"
"panic_rtt" = "*"
"capnp" = "*"
"term" = "*"
"atomicwrites" = "*"
"ansi_term" = "*"
"postgres" = "*"
"dpdk-core" = "*"
"newtype_derive" = "*"
"rust_decimal" = "*"
"openssl-sys" = "*"
"bincode" = "*"
"num-bigint" = "*"
"syntex" = "*"
"gfx" = "*"
"piston2d-opengl_graphics" = "*"
"nom" = "*"
"crossbeam-epoch" = "*"
"kernel32-sys" = "*"
"utf8-ranges" = "*"
"snap" = "*"
"cmake" = "*"
"hibitset" = "*"
"plist" = "*"
"ggez" = "*"
"ncollide_math" = "*"
"volatile-register" = "*"
"wait-timeout" = "*"
"compiletest_rs" = "*"
"gluon_base" = "*"
"protobuf" = "*"
"lark-debug-with" = "*"
"dirs" = "*"
"term_size" = "*"
"cognitive-qualia" = "*"
"zip" = "*"
"crc" = "*"
"zmq" = "*"
"scoped_threadpool" = "*"
"phf_macros" = "*"
"shell32-sys" = "*"
"grin_util" = "*"
"collision" = "*"
"rustfft" = "*"
"websocket" = "*"
"hex" = "*"
"parity-wasm" = "*"
"tokio-retry" = "*"
"urlencoding" = "*"
"derive-error" = "*"
"num-traits" = "*"
"linked-hash-map" = "*"
"sample" = "*"
"fibers_rpc" = "*"
"cargo-husky" = "*"
"exitfailure" = "*"
"imgref" = "*"
"unwrap" = "*"
"docmatic" = "*"
"rustc-serialize" = "*"
"pbr" = "*"
"carboxyl" = "*"
"reqwest" = "*"
"pango" = "*"
"procedural-masquerade" = "*"
"exitcode" = "*"
"bufstream" = "*"
"ndarray-rand" = "*"
"httpdate" = "*"
"lark-error" = "*"
"rust-crypto" = "*"
"rusttype" = "*"
"noise" = "*"
"mime" = "*"
"if_chain" = "*"
"openblas-src" = "*"
"memmap" = "*"
"atty" = "*"
"widestring" = "*"
"clipboard" = "*"
"quasi_codegen" = "*"
"sha2" = "*"
"slog-stream" = "*"
"permutohedron" = "*"
"rand_xorshift" = "*"
"i3ipc" = "*"
"serde_bytes" = "*"
"socket2" = "*"
"spectral" = "*"
"md5" = "*"
"is-match" = "*"
"relevant" = "*"
"console_error_panic_hook" = "*"
"etcommon-hexutil" = "*"
"r2d2_postgres" = "*"
"vecmath" = "*"
"logger" = "*"
"net2" = "*"
"jni-sys" = "*"
"notify-rust" = "*"
"gif" = "*"
"hashmap_core" = "*"
"mongodb" = "*"
"lalrpop-util" = "*"
"regex" = "*"
"loca" = "*"
"unreachable" = "*"
"hyper-openssl" = "*"
"stdweb" = "*"
"wayland-server" = "*"
"termion" = "*"
"humantime" = "*"
"serde_qs" = "*"
"downcast-rs" = "*"
"gdnative_bindings_generator" = "*"
"cstr-argument" = "*"
"fnv" = "*"
"rulinalg" = "*"
"actix-service" = "*"
"vec_map" = "*"
"bencher" = "*"
"daemonize" = "*"
"typenum" = "*"
"futures-core-preview" = "*"
"chan-signal" = "*"
"scroll" = "*"
"libflo_module" = "*"
"ordermap" = "*"
"antidote" = "*"
"safe_core" = "*"
"sha1" = "*"
"maidsafe_utilities" = "*"
"libimagentrylink" = "*"
"prototty_render" = "*"
"lru-cache" = "*"
"i2csensors" = "*"
"pistoncore-glutin_window" = "*"
"num" = "*"
"colored" = "*"
"bs58" = "*"
"tls-api" = "*"
"twox-hash" = "*"
"rocksdb" = "*"
"anymap" = "*"
"tokio-tungstenite" = "*"
"lettre" = "*"
"mio-extras" = "*"
"enum_derive" = "*"
"heapless" = "*"
"rust-base58" = "*"
"opaque-debug" = "*"
"interledger-service" = "*"
"conrod" = "*"
"odds" = "*"
"keccak-hash" = "*"
"assert_approx_eq" = "*"
"r2d2" = "*"
"amethyst" = "*"
"tokio-threadpool" = "*"
"float-cmp" = "*"
"itertools" = "*"
"simple_logger" = "*"
"text_io" = "*"
"semver" = "*"
"fern" = "*"
"futures-util" = "*"
"slab" = "*"
"plugin" = "*"
"ns-std-threaded" = "*"
"half" = "*"
"subtle" = "*"
"mint" = "*"
"url" = "*"
"numtoa" = "*"
"yup-hyper-mock" = "*"
"assert_cli" = "*"
"terminal_size" = "*"
"base32" = "*"
"common_failures" = "*"
"built" = "*"
"sysconf" = "*"
"collect-mac" = "*"
"lark-debug-derive" = "*"
"alga" = "*"
"ignore" = "*"
"r0" = "*"
"hyper" = "*"
"genmesh" = "*"
"rlibc" = "*"
"serde_urlencoded" = "*"
"quickcheck_macros" = "*"
"geo-types" = "*"
"core-foundation-sys" = "*"
"flexi_logger" = "*"
"sysfs_gpio" = "*"
"abscissa" = "*"
"unidecode" = "*"
"p-macro" = "*"
"backoff" = "*"
"nalgebra" = "*"
"shred-derive" = "*"
"tokio-async-await" = "*"
"wio" = "*"
"scraper" = "*"
"cc" = "*"
"base64" = "*"
"libp2p-core" = "*"
"getopts" = "*"
"httparse" = "*"
"simple-error" = "*"
"bodyparser" = "*"
"specs" = "*"
"select" = "*"
"vcell" = "*"
"xz2" = "*"
"objc" = "*"
